--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -46,6 +46,7 @@
         <p id="batterystatus"></p>
         <button id="btnCamera">拍照</button>
         <img class="myImg" id="myImg">
+        <input accept="image/*" capture="camera" id="inputImage" type="file">
     </div>
 </div>
 <script src="cordova.js"></script>
